--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Erfan Samandarian's Website</title>
-    <link rel="icon" type="image/x-icon" href="redrocks.ico">
+    <link rel="icon" type="image/x-icon" href="coolness.ico">
   </head>
   <body>
     <h1>
