--- a/syntha.html
+++ b/syntha.html
@@ -12,6 +12,9 @@
     </h1>
       <img src="images/logo.png" alt="syntha">
     <h2>
+      Convert EPUB books to MP3 audiobooks
+    </h2>
+    <h2>
       <a href="https://www.github.com/erfansamandarian/syntha" target="_blank">Syntha</a>
     </h2>
   </body>
