--- a/syntha.html
+++ b/syntha.html
@@ -17,7 +17,7 @@
       Convert EPUB books to MP3 audiobooks
     </h2>
     <h2>
-      <a href="https://www.github.com/erfansamandarian/syntha" target="_blank">Syntha</a>
+      <a href="https://www.github.com/erfansamandarian/syntha" target="_blank">GitHub</a>
     </h2>
   </body>
 </html>
