syntha page and link

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     <h2>
       <a href="https://www.github.com/erfansamandarian" target="_blank">GitHub</a>
     </h2>
+    <br>
+    <br>
+      <a href="https://erfansamandarian.com/syntha"><img src="images/logo.png" alt="syntha" style="background: #000000"></a>
   </body>
 </html>
