syntha's image -> black

--- a/syntha.html
+++ b/syntha.html
@@ -12,7 +12,7 @@
     <h1>
       Syntha
     </h1>
-      <img src="images/logo.png" alt="syntha">
+      <img src="images/logo.png" alt="syntha" style="background: #000000"></a>
     <h2>
       Convert EPUB books to MP3 audiobooks
     </h2>
