--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="https://www.github.com/erfansamandarian" target="_blank">GitHub</a>
     </h2>
     <br>
-    <br>
       <a href="https://erfansamandarian.com/syntha"><img src="images/logo.png" alt="syntha" style="background: #000000"></a>
+      <p>Convert EPUB books to MP3 audiobooks.</p>
   </body>
 </html>
